--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,12 @@
-version: "{build}"
-os: Windows Server 2012 R2
+environment:
+  matrix:
+    - PYTHON: "C:\\Python33"
+      PYTHON_VERSION: "3.3.5"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python33-x64"
+      PYTHON_VERSION: "3.3.5"
+      PYTHON_ARCH: "64"
+
 test_script:
   - python -m unittest discover
