--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,4 @@
+build: off
 environment:
   matrix:
     - PYTHON: "C:\\Python33"
@@ -7,6 +8,5 @@ environment:
     - PYTHON: "C:\\Python33-x64"
       PYTHON_VERSION: "3.3.5"
       PYTHON_ARCH: "64"
-
 test_script:
   - python -m unittest discover
