--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 python:
   - 3.3
+install:
+  pip install --user pycodestyle
+before_script:
+  - pycodestyle --max-line-length 100 .
 script:
  - python -m unittest discover
